WIP moving to platformio. Bumped version to 0.6.1
Removed a lot of obsolete codode, reorganized dependency handling,
updated .gitignore, added requirements.txt, improved code quality.

This is basically a rewrite of at least the arduino_cli.

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,10 @@ COPYRIGHT
 *.pyc
 *~
 *.swp
+*.pio
 README.rst
 get-pip.py
+pyvenv.cfg
 pypy-5.0.1-linux_x86_64-portable.tar.bz2
 #project.cfg
 pip-selfcheck.json
