--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install -r tests/requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint --rcfile tests/pylint.conf $(git ls-files '*.py')
