--- a/tests/data/pinfiles/nano.yml
+++ b/tests/data/pinfiles/nano.yml
@@ -34,6 +34,7 @@ pins:
     pwm_capable: True
   - physical_id: 12
   - physical_id: 13
+    alias: D13
     mode: output
   - physical_id: 14
     mode: input
