Rename pinfiles to boardfiles (I)
Boardfiles was chosen over pinfiles, because we store at least
the default baudrate in this file too. So, technically, it already
holds more information than just pin.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ namespaces = true
 where = ["src"]
 
 [tool.setuptools.package-data]
-"pyduin.data.pinfiles" = ["*.yml"]
+"pyduin.data.boardfiles" = ["*.yml"]
 "pyduin.data.platformio" = ["platformio.ini", "pyduin.ino"]
 
 [tool.distutils.bdist_wheel]
