Add sparkfun_promicro to platformio.ini, also fix name of boardfile
More devices, more fun.

--- a/src/pyduin/data/platformio/platformio.ini
+++ b/src/pyduin/data/platformio/platformio.ini
@@ -54,3 +54,9 @@ platform = atmelavr
 platform = atmelavr
 board = uno
 framework = arduino
+
+[env:sparkfun_promicro16]
+platform = atmelavr
+board = sparkfun_promicro16
+framework = arduino
+
