Fix typo in uno firmware

--- a/src/pyduin/data/boardfiles/uno.yml
+++ b/src/pyduin/data/boardfiles/uno.yml
@@ -52,7 +52,7 @@ pins:
     alias: A3
   - physical_id: 18
     extra:
-      - analaog
+      - analog
       - sda
     alias: A4
   - physical_id: 19
